fix: Missing comma

--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "build": "grunt build",
     "install-build": "npm install && grunt build",
     "preversion": "npm run clean && npm run build && npm run test:version",
-    "postversion": "git push --no-verify && git push --tags --no-verify"
+    "postversion": "git push --no-verify && git push --tags --no-verify",
     "prepare": "npm run clean-build"
   },
   "husky": {
